<resources>
    <string name="app_name">MVVMLoginExample</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="button_one">Open Deep Link</string>
    <string name="button_two">Two</string>
    <string name="button_three">Three</string>

    <string name="button_english">English</string>
    <string name="button_spanish">Spanish</string>

    <string name="text_selected_lang">English</string>

    <string name="text_menu_list">People List</string>
    <string name="text_menu_open_app">Open Apps</string>
    <string name="text_menu_change_lang">Change Language</string>
    <string name="text_menu_about_us">About US</string>
    <string name="text_menu_terms">Terms and Conditions</string>
    <string name="text_menu_logout">Logout</string>
</resources>
